comment about the report nodes kept in context
Signed-off-by: Luma <zamarrenolm@aia.es>